# datascience-personal-templates

./: README.md  cookiecutter.json
config/: environment.yml
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.directory_name}}/config/: environment.yml
{{cookiecutter.directory_name}}/src/: main.py
