[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.10"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
interrogate = "^1.5.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''